add nginx loader process doc

--- a/document/nginx-1.18.0/缓存加载进程.md
+++ b/document/nginx-1.18.0/缓存加载进程.md
@@ -58,6 +58,8 @@ static void ngx_cache_loader_process_handler(ngx_event_t *ev)
 	{
     	ngx_http_file_cache_t  *cache, **ce;
     	cache->path->manager = ngx_http_file_cache_manager;
+        
+        //file_cache_loader给磁盘缓存对象对应路径下已有的缓存文件建立红黑树，从而让nginx可以继续使用上一次缓存文件
     	cache->path->loader = ngx_http_file_cache_loader;
     	cache->path->data = cache;
     	cache->path->conf_file = cf->conf_file->file.name.data;
