--- a/document/nginx-1.19.2/事件驱动模型.md
+++ b/document/nginx-1.19.2/事件驱动模型.md
@@ -1,7 +1,11 @@
+
+
+
+
 ## nginx事件驱动模型
 
-| author | update |
-| ------ | ------ |
+| author               | update     |
+| -------------------- | ---------- |
 | perrynzhou@gmail.com | 2020/10/12 |
 
 ### 事件驱动模型介绍
@@ -13,3 +17,9 @@
   - 事件收集器,负责收集所有的事件，包括来自用户、自软件、硬件
   - 事件分发器，负责把收集的事件分发到目标对象上，目标对象就是事件处理器的位置
   - 事件处理,负责具体事件的响应工作。
+- nginx事件主要来自于网络和磁盘，事件模块负责时间收集、管理和分发，其他模块都是事件的处理者和消费者。
+- 由于nginx是web服务器，而http协议是基于TCP，因此nginx的网络事件基于TCP网络。目前Linux支持事件机制如下:
+	- Linux内核2.6以及Unix操作系统支持poll模型或者select机制
+	- Linux内核2.6版本以上使用的epoll模型。
+	- Linux内核5.x版本及以上支持io_uring模型
+- nginx管理一个事件，首先是需要在这个事件上注册一个handler,这个handler负责处理这个事件，像openresty中的ngx_lua就是利用注册handler实现自定义开发，对HTTP请求过程进行干预
