--- a/document/nginx-1.19.2/2020-11-03-nginx框架功能介绍.md
+++ b/document/nginx-1.19.2/2020-11-03-nginx框架功能介绍.md
@@ -92,3 +92,16 @@ typedef enum {
   
   ### 处理引擎
   - nginx的模块ngx_http_core_module管理所有的handler模块，它定义请求的处理阶段，把所有的handler模块组织程一条流水线，通过一个引擎来驱动模块处理http请求
+  - 处理函数是如何组织的，nginx使用了ngx_http_phase_t结构存储每个阶段的可用函数的处理函数，本质上是一个ngx_array_t数组，数组中每个元素的类型是ngx_http_handler_pt类型。ngx_http_core_module的main配置结构定义了数组phases，用来存储处理阶段函数.tonggu9o这种方式，nginx把所有http模块的handler组成一个handler表，纵向是每个阶段处理函数，横向是各个模块的处理函数。
+  ```
+  typedef struct {
+    ngx_array_t                handlers;
+  } ngx_http_phase_t;
+
+
+typedef struct {
+		// 忽略其他...
+    ngx_http_phase_t           phases[NGX_HTTP_LOG_PHASE + 1];
+  } ngx_http_core_main_conf_t;
+
+  ```
