--- a/document/nginx-1.19.2/2020-11-03-nginx中tcp反向代理.md
+++ b/document/nginx-1.19.2/2020-11-03-nginx中tcp反向代理.md
@@ -1,8 +1,8 @@
 ## nginx中tcp反向代理
 
-| author | update |
-| ------ | ------ |
-| perrynzhou@gmail.com | 2020/11/03 |
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/11/03 |中国开源存储技术交流群(672152841) |
 
 - nginx配置
 
