--- a/document/nginx-1.19.2/2020-11-20-nginx子请求介绍.md
+++ b/document/nginx-1.19.2/2020-11-20-nginx子请求介绍.md
@@ -1,8 +1,8 @@
 ### nginx子请求介绍
 
-| author | update |
-| ------ | ------ |
-| perrynzhou@gmail.com | 2020/11/20 |
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/11/20 |中国开源存储技术交流群(672152841) |
 
 
 ###  背景
