--- a/document/nginx-1.19.2/模块架构.md
+++ b/document/nginx-1.19.2/模块架构.md
@@ -1,5 +1,11 @@
 ## nginx 模块架构
 
+
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/11/23 |中国开源存储技术交流群(672152841) |
+
+
 ### nginx模块种类
 - nginx目前有5中模块类型化，分别是conf、event、core、http、stream模块。具体的定义如下
 ```
