--- a/document/nginx-1.19.2/缓存加载进程.md
+++ b/document/nginx-1.19.2/缓存加载进程.md
@@ -1,8 +1,9 @@
 ## 缓存加载加载进程
 
-| author | update |
-| ------ | ------ |
-| perrynzhou@gmail.com | 2020/05/24 |
+
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/05/23 |中国开源存储技术交流群(672152841) |
 
 
 - 缓存加载进程(loader),在nginx启动后（60s）将磁盘上次缓存的对象加载到内存中，当加载进程完成这个操作就退出。nginx用ngx_cache_loader_ctx作为loader的核心实现，就具体的结构定义如下
