--- a/document/tcp-ip/2020-11-16-理解TCP写操作.md
+++ b/document/tcp-ip/2020-11-16-理解TCP写操作.md
@@ -1,9 +1,9 @@
 
 ##   理解TCP写操作
 
-| author | update |
-| ------ | ------ |
-| perrynzhou@gmail.com | 2020/11/16 |
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/11/16 |中国开源存储技术交流群(672152841) |
 
 - TCP的write操作是把用户态的数据拷贝到TCP内核协议栈的缓冲区,并不是把数据发送到对端，也就是说write返回的时候仅仅是用户态到内核态的数据拷贝成功，具体的什么时候数据需要发送是由TCP协议栈的发送窗口和拥塞窗口决定
 
