--- a/document/nginx-1.19.2/2020-11-03-nginx框架功能介绍.md
+++ b/document/nginx-1.19.2/2020-11-03-nginx框架功能介绍.md
@@ -1,9 +1,9 @@
 
 ##  nginx框架功能介绍
 
-| author | update |
-| ------ | ------ |
-| perrynzhou@gmail.com | 2020/11/03 |
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/11/05 |中国开源存储技术交流群(672152841) |
 
 ### 请求处理的流程概览：
 
