--- a/document/nginx-1.19.2/事件驱动模型.md
+++ b/document/nginx-1.19.2/事件驱动模型.md
@@ -4,9 +4,9 @@
 
 ## nginx事件驱动模型
 
-| author               | update     |
-| -------------------- | ---------- |
-| perrynzhou@gmail.com | 2020/10/12 |
+| 作者 | 时间 |QQ技术交流群 |
+| ------ | ------ |------ |
+| perrynzhou@gmail.com |2020/10/08 |中国开源存储技术交流群(672152841) |
 
 ### 事件驱动模型介绍
 
